--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-qr-barcode-scanner": "^2.1.8",
+    "react-router-dom": "^7.8.0",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12",
     "three": "^0.179.1"
   },
